fixed footer spacing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -119,17 +119,16 @@ a:hover{
 .footer{
     background: #002138;
     color: #EDEDED;
-    display: flex;
-    justify-content: center;
     height: 100px;
-}
-
-.footer p{
-    padding: 20px 10px;
+    padding: 15px 40px;
+    margin-bottom: 30px;
 }
 
 .footer a{
-    padding: 20px 10px;
-  
-  
+    padding: 5px;
+}
+
+
+.copyright{
+    float: right;
 }
